RESOLVED FIXED 55474
Table outlines are not drawn
https://bugs.webkit.org/show_bug.cgi?id=55474
Summary Table outlines are not drawn
Abhishek Arya
Reported 2011-03-01 09:18:01 PST
Currently we are not painting outlines for tables.
Attachments
Patch (31.18 KB, patch)
2011-03-01 09:39 PST, Abhishek Arya
hyatt: review+
Abhishek Arya
Comment 1 2011-03-01 09:39:01 PST
Abhishek Arya
Comment 2 2011-03-01 09:41:42 PST
note that table row outlines does not look supported in IE, opera and firefox draws it incorrectly (try adding a outline to tr in layouttest and try in firefox, you will see incorrect table row and table cell outline overlap). in our code, we do look to paint cell directly without calling rendertablerow paint. So, leaving my patch for checking table outlines and table cell outlines only.
Dave Hyatt
Comment 3 2011-03-01 13:56:17 PST
Comment on attachment 84241 [details] Patch r=me
Abhishek Arya
Comment 4 2011-03-01 14:18:58 PST
Daniel Bates
Comment 5 2011-03-29 09:43:17 PDT
*** Bug 41030 has been marked as a duplicate of this bug. ***
Alexey Proskuryakov
Comment 6 2011-03-30 09:58:57 PDT
See also: bug 35813, bug 18179.
Abhishek Arya
Comment 7 2011-03-30 10:12:57 PDT
Yeah this 2 liner outline fix has to be added to a couple of Render* classes. I discovered this while fixing one of the security bugs. Also, rendering outline for table rows and columns is tricky because of the overlap problem in certain scenarios. bug 57439 on iframe should be easy enough (try adding these 2 lines to RenderWidget::paint(PaintInfo& paintInfo, int tx, int ty))
Note You need to log in before you can comment on or make changes to this bug.