2011-03-01  Abhishek Arya  <inferno@chromium.org>

Reviewed by Dave Hyatt.

        Paint outline for tables.
        https://bugs.webkit.org/show_bug.cgi?id=55474

        Test: fast/table/table-and-parts-outline.html

        * rendering/RenderTable.cpp:
        (WebCore::RenderTable::paintObject):
2011-03-01  Abhishek Arya  <inferno@chromium.org>

        Reviewed by Dave Hyatt.

        Tests that we draw outlines for table and table cells.
        https://bugs.webkit.org/show_bug.cgi?id=55474

        * fast/table/table-and-parts-outline.html: Added.
        * platform/mac/fast/table/table-and-parts-outline-expected.checksum: Added.
        * platform/mac/fast/table/table-and-parts-outline-expected.png: Added.
        * platform/mac/fast/table/table-and-parts-outline-expected.txt: Added.


Canonical link: https://commits.webkit.org/69937@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@80040 268f45cc-cd09-0410-ab3c-d52691b4dbfc